Trying to fix the submodule for the theme

--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ baseurl: /
 languageCode: en-us
 title: The Resampled Brain
 sidebarFreeText: ""
-theme: "strange-case"
+theme: "strange-case-2"
 googleAnalytics: ''
 disqusShortname: ''
 ignoreFiles:
