--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,5 @@
 baseurl: "https://resampledbrain.netlify.app/"
+publishDir: "docs"
 languageCode: en-us
 title: The Resampled Brain
 sidebarFreeText: ""
@@ -16,7 +17,7 @@ permalinks:
 menu:
   main:
     - name: About
-      url: /about/
+      url: https://resampledbrain.netlify.app/about
     - name: GitHub
       url: https://github.com/ddixonAI
     - name: Twitter
