--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,5 @@
 baseurl: "https://resampledbrain.netlify.app/"
+publishDir: "docs"
 languageCode: en-us
 title: The Resampled Brain
 sidebarFreeText: ""
