--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ permalinks:
 menu:
   main:
     - name: About
-      url: https://resampledbrain.netlify.app/about
+      url: /about/
     - name: GitHub
       url: https://github.com/ddixonAI
     - name: Twitter
