--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ permalinks:
 menu:
   main:
     - name: About
-      url: /about/
+      url: https://resampledbrain.netlify.app/2021/07/05/about/
     - name: GitHub
       url: https://github.com/ddixonAI
     - name: Twitter
